test/e2e/testdata/zone-aware-routing-btp-force-local-zone.yaml
apiVersion: v1
kind: Service
metadata:
  name: btp-force-local-zone
  namespace: gateway-conformance-infra
spec:
  selector:
    app: zone-aware-backend
  ports:
    - protocol: TCP
      port: 8080
      name: http11
      targetPort: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: btp-force-local-zone
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /btp-force-local-zone
      backendRefs:
        - name: btp-force-local-zone
          port: 8080
          weight: 1
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: btp-force-local-zone
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: btp-force-local-zone
  loadBalancer:
    type: RoundRobin
    zoneAware:
      preferLocal:
        minEndpointsThreshold: 1
        force:
          minEndpointsInZoneThreshold: 1
